# AdventOfCode

./: LICENSE  README
2020/: adventofcode.cabal
2021/: .gitignore  adventofcode2021.cabal  package.yaml
2021/01-sonar_sweep/: Tests.hs
2021/02-dive/: Tests.hs
2021/03-binary_diagnostic/: Tests.hs
2021/04-giant_squid/: Tests.hs
2021/05-hydrothermal_venture/: Tests.hs
2022/: adventofcode2022.cabal
2022/01_calorie-counting/: Spec.hs
2022/02_rock-paper-scissors/: Spec.hs
2022/03_rucksack-reorganization/: Spec.hs
2022/04_camp-cleanup/: Spec.hs
2022/05_supply-stacks/: Spec.hs
2022/06_tuning-trouble/: Spec.hs
2022/07_no-space-left-on-device/: Spec.hs
2022/08_treetop-tree-house/: Spec.hs
2022/09_rope-bridge/: Spec.hs
2022/10_cathode-ray-tube/: Spec.hs
2022/11_monkey-in-the-middle/: Spec.hs
2022/12_hill-climbing-algorithm/: Spec.hs
2022/13_distress-signal/: Spec.hs
2022/14_regolith-reservoir/: Spec.hs
2022/15_beacon-exclusion-zone/: Spec.hs
2022/18_boiling-boulders/: Spec.hs
2022/20_grove-positioning-system/: Spec.hs
2022/21_monkey-math/: Spec.hs
2022/22_monkey-map/: Spec.hs
2022/23_unstable-diffusion/: Spec.hs
2022/24_blizzard-basin/: Spec.hs
2023/: .gitignore  adventofcode2023.cabal
2023/01_trebuchet/: Spec.hs  trebuchet.py
2023/02_cube_conundrum/: Spec.hs  cube_conundrum.py
2023/03_gear_ratios/: Spec.hs  gear_ratios.py
2023/04_scratchcards/: scratchcards.py
2023/05_if_you_give_a_seed_a_fertilizer/: if_you_give_a_seed_a_fertilizer.py
2023/06_wait_for_it/: wait_for_it.py
2024/: Util.kt
(+36 files in other folders)
