cabal-version:       3.0

name:                adventofcode
version:             0.1.0.0
description:         My solutions for the Advent Of Code 2020 challenge written in Haskell
bug-reports:         https://github.com/Scriptim/AdventOfCode/issues
license:             MIT
author:              Scriptim
maintainer:          me@scriptim.dev

executable adventofcode
  main-is:             Main.hs
  build-depends:       base ^>=4.14.1.0
  default-language:    Haskell2010

executable report-repair
  main-is:             main.hs
  hs-source-dirs:      01-report_repair
  build-depends:       base ^>=4.14.1.0
  default-language:    Haskell2010

executable password-philosophy
  main-is:             main.hs
  hs-source-dirs:      02-password_philosophy
  build-depends:       base ^>=4.14.1.0, split ^>=0.2.3.4
  default-language:    Haskell2010
